// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snippet > no entity 1`] = `
<div
  class="Snippet"
  contenteditable="false"
>
  This is a snippet block:
  <div
    class="Snippet__text"
    contenteditable="false"
  >
    Placeholder
  </div>
</div>
`;

exports[`Snippet > renders 1`] = `
<div
  class="Snippet"
  contenteditable="false"
>
  This is a snippet block:
  <div
    class="Snippet__text"
    contenteditable="false"
  >
    This is a snippet
  </div>
</div>
`;
